menu icon bug (show behind menu list) fixed

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,6 @@ body {
     grid-template-rows: repeat(4, 1fr);
     text-align: center;
     font-size: 1.5rem;
-    background: rgb(248, 249, 250);
     transition: .35s;
     z-index: 10;
 }
@@ -75,8 +74,9 @@ nav a {
     height: 360px;
     background: url(/sources/img/coffee-machine.jpg);
     background-attachment: fixed;
-    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 
 }
 
@@ -320,10 +320,16 @@ nav a {
     position: relative;
     width: 100vw;
     height: auto;
+    padding-bottom: 35px;
 
     box-shadow: inset 0px 5px 15px;
 
     text-align: center;
+
+    background-image: url(../sources/img/About/Coffee-tree.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #about-title {
@@ -332,17 +338,12 @@ nav a {
     color: white;
 }
 
-#about-article-backgroud {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    background-image: url("../sources/img/About/Coffee-tree.jpg");
-    filter: blur(2px);
-}
 
 #about-article {
     color: white;
     margin: 0 20px;
+    background: rgba(0, 0, 0, .5);
+    border-radius: 10px;
 }
 
 
